--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/prettier": "^2",
     "@types/react": "^18.0.26",
+    "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   }
 }
