--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
