--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "me",
   "packageManager": "yarn@3.3.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
