--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "framer-motion": "^8.4.2",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
