--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stitches/react": "^1.2.8",
     "framer-motion": "^8.4.2",
     "next": "^13.1.1",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
