--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -23,6 +25,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^8.0.0-alpha.3",
+    "@storybook/addon-interactions": "^8.0.0-alpha.3",
+    "@storybook/addon-links": "^8.0.0-alpha.3",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^8.0.0-alpha.3",
+    "@storybook/nextjs": "^8.0.0-alpha.3",
+    "@storybook/react": "^8.0.0-alpha.3",
+    "@storybook/test": "^8.0.0-alpha.3",
     "@types/eslint": "^8",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2",
@@ -37,9 +47,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
+    "storybook": "^8.0.0-alpha.3",
     "typescript": "^5.3.3"
   },
   "lint-staged": {
