--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.3.0",
+    "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/next-plugin": "^2.3.2",
+    "@vanilla-extract/recipes": "^0.5.1",
     "framer-motion": "^10.16.16",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
