feat(deps): `ve dynamic`, `clsx`, `jotai` libs 추가

--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.3.0",
     "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/dynamic": "^2.1.0",
     "@vanilla-extract/next-plugin": "^2.3.2",
     "@vanilla-extract/recipes": "^0.5.1",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
+    "jotai": "^2.6.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
