--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "jotai": "^2.6.0",
+    "kbar": "^0.1.0-beta.44",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
